@@ -1,6 +1,12 @@
 Release history for Acme-Time-Constant
 
 {{$NEXT}}
+ - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.001005, see misc/*.deps* for details
+ - develop: +1 ↑1 (suggests: ↑2)
+ - test: ↓1
 
 0.001005 2016-04-27T14:50:17Z adc5064
  - Requiring the newest Time::Warp, which appears to have avoided the nvsize bug reported in issue #1
